Fix textarea resizers z-index issue in Chrome

--- a/static/blue-nav.css
+++ b/static/blue-nav.css
@@ -117,6 +117,7 @@ hr.solid {
 } */
 textarea {
   resize: vertical;
+  transform: translateZ(0);
 }
 
 
